k8s/whispr/preprod/auth-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: whispr-preprod
spec:
  type: ClusterIP
  selector:
    app: auth-service
  ports:
    - name: http
      port: 3010
      targetPort: 3010
    - name: grpc
      port: 50010
      targetPort: 50010
